--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,6 @@
     "prettier",
     "plugin:react/jsx-runtime"
   ],
-  "parser": "@babel/eslint-parser",
   "parserOptions": {
     "ecmaFeatures": {
       "jsx": true
@@ -16,22 +15,15 @@
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": [
-    "react"
-  ],
+  "plugins": ["react"],
   "rules": {
     "react/jsx-filename-extension": [
       1,
       {
-        "extensions": [
-          ".js",
-          ".jsx"
-        ]
+        "extensions": [".js", ".jsx"]
       }
     ],
     "react/prop-types": 0,
-    "react/destructuring-assignment": [
-      0
-    ]
+    "react/destructuring-assignment": [0]
   }
 }
